[package]
name = "filetags"
version = "0.1.0"
edition = "2024"

[dependencies]
assert_fs = "1.1.3"
clap = "4.5.58"
lazy_static = "1.5.0"
regex = "1.11.1"
similar = { version = "2.7.0", features = ["text"] }
tempdir = "0.3.7"
time = { version = "0.3.46", features = ["formatting", "macros", "parsing"] }
walkdir = "2.5.0"
